# rm_code

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Folder.DotSettings  README.md  log.md
bringup_templates/: ArtinxHub.service  bringup.bash
config_templates/: angle_solver_test.conf  armor_detector_test.conf  armor_locator_test.conf  caf-application.conf  car_detector_test.conf  color_calibration_test.conf  energy_detector_test.conf  nnet_armor_detector_test.conf  ore_detector_test.conf  simulator_test.conf  undistort_calibration_test.conf
data/camera_calibration/: KE0200080462.xml  KE0200080463.xml  KE0200080464.xml  NE0200080112.xml  NE0200080113.xml  RS0220008020.xml  RS0221008020.xml  RS0222008020.xml  RS0223008020.xml  RS0225008020.xml
data/weights/armor_classify/: numClassierModel.mapping  numClassierModel.xml
data/weights/car300/: car300.xml
data/weights/car300_car/: car300_car.mapping  car300_car.xml
deploy_config/: Energy_test.conf  cameraCalibration.conf  engineer.conf  fixArmorDetector.conf  hero.conf  infantry.conf  sentry.conf  uav.conf
docs/: actor_system.md  checklist.md  code_details.md  open_source_repo.md  tool_tutorials.md
include/: BlackBoard.hpp  CameraFrame.hpp  ClassifiedNum.hpp  Common.hpp  Constants.hpp  Crc.hpp  DataDesc.hpp  DetectedArmor.hpp  DetectedCar.hpp  DetectedOre.hpp  DetectedTarget.hpp  EnergyDetect.hpp  ExceptionProbe.hpp  FrameRateKeeper.hpp  HeadInfo.hpp  Hub.hpp  Packet.hpp  PacketHelper.hpp  PostureData.hpp  RadarCameraPoints.hpp  SelectedTarget.hpp  SimulatorMotionType.hpp  SimulatorWorldInfo.hpp  SuppressWarningBegin.hpp  SuppressWarningEnd.hpp  Timer.hpp  Transform.hpp  Utility.hpp
include/AsyncSerial/: AsyncSerial.h  BufferedAsyncSerial.h
pages/: index.html
pages/css/: main.css
pages/js/: main.js
scripts/: auto-make.bash  close-service.bash  setup-service.bash
src/: CMakeLists.txt  HubMain.cpp
src/Core/: BlackBoard.cpp  ChaosMonkey.cpp  Daemon.cpp  Logger.cpp  PerformanceMonitor.cpp
src/DataLink/: HttpServer.cpp  SerialPort.cpp
src/DataLink/AsyncSerial/: AsyncSerial.cpp  BufferedAsyncSerial.cpp
src/Detect/: ArmorDetector.cpp  CarDetector.cpp  CarTracker.cpp  EnergyDetector.cpp  NNetArmorDetector.cpp  NumClassifier.cpp  OreAlignment.cpp  OreExchangeRectifier.cpp
src/Postprocess/: ArmorPredictor.cpp
src/Preprocess/: ColorCalibration.cpp  IMUFilter.cpp  Undistort.cpp
src/Sensor/: DahengDriver.cpp  ImageSequenceReplay.cpp  VideoReplay.cpp
src/Solve/: AngleSolver.cpp  ArmorLocator.cpp  RadarLocator.cpp
src/Strategy/: Hero.cpp  Infantry.cpp  Sentry.cpp  UAV.cpp
src/Test/: TestHelper.cpp
src/Test/ActorFramework/: Actor.cpp  Availability.cpp  DaemonTester.cpp
src/Test/Detect/: FakeSerialPort.cpp
src/Test/Sensor/: FixedIMU.cpp
src/Test/Solve/: ArmorLocatorTester.cpp  FakeDetector.cpp  FakeHead.cpp  FakeIMU.cpp  SimpleStrategy.cpp  Simulator.cpp
src/Utility/: ArmorDetectorDrawer.cpp  CarDetectorDrawer.cpp  Crc.cpp  KM.cpp  OpenCVHelper.cpp  PID.cpp  Timer.cpp  VideoRecorder.cpp
tests/: CMakeLists.txt
tests/ActorFramework/: CMakeLists.txt  actor.conf
tests/Solve/: CMakeLists.txt  armor_locator_10m.conf  armor_locator_3m.conf  armor_locator_dist.conf  armor_locator_full.conf  dual_moving5m.conf  large_circle5m.conf  moving_static5m.conf  outpost_full.conf  outpost_half.conf  outpost_stop.conf  sentry_3m.conf  sentry_8m.conf  simulator_self.conf  spin3m.conf  spin5m.conf  static5m.conf  static_moving5m.conf
tests/Utility/: CMakeLists.txt  pid_simulator_test.conf
